--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
-  "homepage": "https://modulointegrativo.github.io/semaforodotoquemedunir/",
+  "homepage": "https://modulointegrativo.github.io/testemodulo/",
   "eslintConfig": {
     "extends": [
       "react-app",
